--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/reset.css">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Timer</title>
 </head>
 <body>
     <header>
         <h1>
             <a href="#">
-                <img src="./images/weniv-logo.svg" alt="weniv">
+                <img class="main-logo" src="./images/weniv-logo.svg" alt="weniv">
             </a> 
         </h1>
     </header>
@@ -21,26 +23,27 @@
             <form action="" class="timer__form">
                 <fieldset class="timer__field">
                     <label for="" class="timer__label">HRS</label>
-                    <input type="number" class="timer__input">
+                    <input type="number" class="timer__input" placeholder="00">
                 </fieldset>
 
                 <fieldset class="timer__field">
                     <label for="" class="timer__label">MIN</label>
-                    <input type="number" class="timer__input"> 
+                    <input type="number" class="timer__input" placeholder="00"> 
                 </fieldset>
 
                 <fieldset class="timer__field">
                     <label for="" class="timer__label">SEC</label>
-                    <input type="number" class="timer__input">
-                </fieldset>
-
+                    <input type="number" class="timer__input" placeholder="00">
+                </fieldset>   
+            </form>
+            <div class="btn-group">
                 <button class="timer__btn--start">
                     <img src="./images/start-disabled.svg" alt="스타트 버튼">
                 </button>
                 <button class="timer__btn--reset" type="reset">
                     <img src="./images/reset-disabled.svg" alt="리셋 버튼">
                 </button>
-            </form>
+            </div>
         </section>
     </main>
 
