--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/reset.css">
     <link rel="stylesheet" href="./style/style.css">
+    <script src="./js/timer.js" defer></script>
     <title>Timer</title>
 </head>
 <body>
@@ -23,17 +24,17 @@
             <form action="" class="timer__form">
                 <fieldset class="timer__field">
                     <label for="" class="timer__label">HRS</label>
-                    <input type="number" class="timer__input" placeholder="00">
+                    <input type="number" class="timer__input" value="00">
                 </fieldset>
 
                 <fieldset class="timer__field">
                     <label for="" class="timer__label">MIN</label>
-                    <input type="number" class="timer__input" placeholder="00"> 
+                    <input type="number" class="timer__input" value="00"> 
                 </fieldset>
 
                 <fieldset class="timer__field">
                     <label for="" class="timer__label">SEC</label>
-                    <input type="number" class="timer__input" placeholder="00">
+                    <input type="number" class="timer__input" value="00">
                 </fieldset>   
             </form>
             <div class="btn-group">
